--- a/content/Taphop.ipynb
+++ b/content/Taphop.ipynb
@@ -53,11 +53,11 @@
    "source": [
     "# python code\n",
     "# Cho tập hợp M={\"bóng bàn\",\"bóng đá\", \"cầu lông\", \"bóng rổ\"}\n",
-    "M = {\"bóng bàn\",\"bóng đá\", \"cầu lông\", \"bóng rổ\"}\n",
+    "M = {\"bóng bàn\", \"bóng đá\", \"cầu lông\", \"bóng rổ\"}\n",
     "\n",
     "# đọc tên các phần tử của tập hợp đó\n",
     "for m in M:\n",
-    "  print(m)"
+    "    print(m)"
    ]
   },
   {
@@ -90,10 +90,10 @@
     "B = {2, 3, 5, 7}\n",
     "\n",
     "# 2 có thuộc B hay không\n",
-    "print (\"2 có thuộc B: \", 2 in B)\n",
+    "print(\"2 có thuộc B: \", 2 in B)\n",
     "\n",
     "# 4 có thuộc B hay không\n",
-    "print (\"4 có thuộc B: \", 4 in B)"
+    "print(\"4 có thuộc B: \", 4 in B)"
    ]
   },
   {
@@ -139,16 +139,16 @@
    ],
    "source": [
     "# Cho tập hợp M = {\"a\",\"e\", \"i\", \"o\", \"u\"}\n",
-    "M = {\"a\",\"e\", \"i\", \"o\", \"u\"}\n",
+    "M = {\"a\", \"e\", \"i\", \"o\", \"u\"}\n",
     "\n",
     "# \"a\" ∈ M ?\n",
-    "print ('\"a\" ∈ M:', \"a\" in M)\n",
+    "print('\"a\" ∈ M:', \"a\" in M)\n",
     "\n",
-    "print ('\"b\" ∈ M:', \"b\" in M)\n",
+    "print('\"b\" ∈ M:', \"b\" in M)\n",
     "\n",
-    "print (\"e\" not in M)\n",
+    "print(\"e\" not in M)\n",
     "\n",
-    "print (\"c\" not in M)"
+    "print(\"c\" not in M)"
    ]
   },
   {
@@ -197,14 +197,13 @@
     "import locale\n",
     "import calendar\n",
     "\n",
-    "locale.setlocale(locale.LC_ALL, 'vi_VN')\n",
+    "locale.setlocale(locale.LC_ALL, \"vi_VN\")\n",
     "\n",
     "year = 2023\n",
     "for month in range(1, 13):\n",
     "    print(\"Tháng\", month, \"có\", calendar.monthrange(year, month)[1], \"ngày\")\n",
     "\n",
-    "H = {month for month in range(1, 13)\n",
-    "     if calendar.monthrange(year, month)[1] == 30}\n",
+    "H = {month for month in range(1, 13) if calendar.monthrange(year, month)[1] == 30}\n",
     "\n",
     "# Tháng Hai thuộc H?\n",
     "print(\"Tháng Hai thuộc H?\", 2 in H)\n",
@@ -287,11 +286,11 @@
    ],
    "source": [
     "A = {\n",
-    "    s for s in range(10) if s % 2 == 0  # Tạo một tập hợp A gồm các số chẵn từ 0 đến 10: \n",
+    "    s for s in range(10) if s % 2 == 0  # Tạo một tập hợp A gồm các số chẵn từ 0 đến 10:\n",
     "}\n",
     "A\n",
     "# range(10): số nguyên từ 0 tới 9; số tự nhiên nhỏ hơn 10\n",
-    "# s % 2: số dư của phép chia s cho 2. Số chẵn: s % 2 == 0\n"
+    "# s % 2: số dư của phép chia s cho 2. Số chẵn: s % 2 == 0"
    ]
   },
   {
@@ -322,9 +321,7 @@
     }
    ],
    "source": [
-    "C = {\n",
-    "    x for x in range(3,18) if x % 3 == 1\n",
-    "}\n",
+    "C = {x for x in range(3, 18) if x % 3 == 1}\n",
     "C\n",
     "# range(3, 18): số nguyên lớn hơn hay bằng 3, nhỏ hơn 18\n",
     "# x % 3: số dư của phép chia x cho 3. x chia cho 3 dư 1: x % 3 == 1"
@@ -358,9 +355,7 @@
     }
    ],
    "source": [
-    "B = {\n",
-    "    c for c in \"ĐÔNG ĐÔ\" if str.isalpha(c)\n",
-    "}\n",
+    "B = {c for c in \"ĐÔNG ĐÔ\" if str.isalpha(c)}\n",
     "B\n",
     "# c in \"ĐÔNG ĐÔ\": các chữ cái trong từ ĐÔNG ĐÔ."
    ]
@@ -394,9 +389,7 @@
    ],
    "source": [
     "# Viết tập hợp các số trong \"2020\"\n",
-    "{\n",
-    "    c for c in \"2020\"\n",
-    "}"
+    "{c for c in \"2020\"}"
    ]
   },
   {
@@ -424,10 +417,8 @@
     }
    ],
    "source": [
-    "E = {\n",
-    "    x for x in range(4,9)\n",
-    "}\n",
-    "print(E)\n"
+    "E = {x for x in range(4, 9)}\n",
+    "print(E)"
    ]
   },
   {
@@ -488,9 +479,7 @@
    ],
    "source": [
     "# B là tập hợp các chữ cái xuất hiện trong từ: \"ĐÔNG ĐÔ\"\n",
-    "B = {\n",
-    "    c for c in \"ĐÔNG ĐÔ\" if str.isalpha(c)\n",
-    "}\n",
+    "B = {c for c in \"ĐÔNG ĐÔ\" if str.isalpha(c)}\n",
     "B"
    ]
   },
@@ -562,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
