--- a/content/congtrunhanchia.ipynb
+++ b/content/congtrunhanchia.ipynb
@@ -56,9 +56,10 @@
     "        prod = int(digit) * int(n1)\n",
     "        result += prod * dec\n",
     "        dec *= 10\n",
-    "        print (f\"{prod:>{estimated_result_len-n1_len-i-4}}\")\n",
+    "        print(f\"{prod:>{estimated_result_len-n1_len-i-4}}\")\n",
     "    print(\"-\" * estimated_result_len)\n",
     "    print(f\"{result:>{estimated_result_len}}\")\n",
+    "\n",
     "\n",
     "n1 = \"123\"\n",
     "n2 = \"456\"\n",
@@ -106,11 +107,13 @@
     "        prod = int(digit) * int(n1)\n",
     "        # cộng dồn\n",
     "        result += prod * dec\n",
-    "        # tăng phần thập phân (từ hàng đơn vị lên hàng 10 \n",
+    "        # tăng phần thập phân (từ hàng đơn vị lên hàng 10\n",
     "        # lên hàng trăm ...\n",
     "        dec *= 10\n",
     "    print(f\"{n1} * {n2} = {result}\")\n",
     "    return result\n",
+    "\n",
+    "\n",
     "nhan_tay_simplify(n1, n2)"
    ]
   },
@@ -126,42 +129,59 @@
     "def divide(x, y, inner_work=False):\n",
     "    if y > x:\n",
     "        return 0, x\n",
-    "    \n",
+    "\n",
     "    x = str(x)\n",
     "    q = \"\"\n",
     "    r = \"\"\n",
     "\n",
-    "    workings = \"-\"*(2*len(str(x))+len(str(y))+20)+\"\\n\"\n",
-    "    len_to_separate = len(str(x))+len(str(y))+4+4\n",
+    "    workings = \"-\" * (2 * len(str(x)) + len(str(y)) + 20) + \"\\n\"\n",
+    "    len_to_separate = len(str(x)) + len(str(y)) + 4 + 4\n",
     "    current_r = \"\"\n",
     "    for i in range(0, len(x)):\n",
     "        r += \"0\"\n",
     "        num = int(r) + int(x[i])\n",
-    "        \n",
+    "\n",
     "        m = 0\n",
     "        while (m + 1) * y <= num:\n",
     "            m += 1\n",
     "        sum = m * y\n",
-    "        \n",
-    "        r = str(num-sum)\n",
+    "\n",
+    "        r = str(num - sum)\n",
     "        q = f\"{q}{m}\"\n",
     "        ls = len(str(sum))\n",
     "\n",
     "        if inner_work:\n",
     "            current_r += str(m)\n",
-    "            math_str = \" \"*(i+1-ls) + f\"-{sum}\"\n",
+    "            math_str = \" \" * (i + 1 - ls) + f\"-{sum}\"\n",
     "            explain = f\"({m}*{y})\"\n",
-    "            workings += math_str + \" \"*(len_to_separate+4-len(math_str)-len(explain))+explain+\"|\" + \" \"+ current_r+\"\\n\"\n",
-    "            workings += \" \"*(i+2-ls) + \"-\"*ls + \" \"*(len_to_separate-i+2)+ \"|\\n\"\n",
-    "            math_str = \" \"*(i+2-len(r)) + r + (\"\" if i >= len(x) else x[i+1:i+2])# + \"\\n\"\n",
+    "            workings += (\n",
+    "                math_str\n",
+    "                + \" \" * (len_to_separate + 4 - len(math_str) - len(explain))\n",
+    "                + explain\n",
+    "                + \"|\"\n",
+    "                + \" \"\n",
+    "                + current_r\n",
+    "                + \"\\n\"\n",
+    "            )\n",
+    "            workings += (\n",
+    "                \" \" * (i + 2 - ls) + \"-\" * ls + \" \" * (len_to_separate - i + 2) + \"|\\n\"\n",
+    "            )\n",
+    "            math_str = (\n",
+    "                \" \" * (i + 2 - len(r)) + r + (\"\" if i >= len(x) else x[i + 1 : i + 2])\n",
+    "            )  # + \"\\n\"\n",
     "            explain = f\"({r}_{'' if i >= len(x) else x[i+1:i+2]})\"\n",
-    "            workings += math_str + \" \"*(\n",
-    "                len_to_separate+5-len(math_str)-len(explain)-1\n",
-    "            )+explain+\"|\\n\"\n",
-    "    workings += \" \"* (len(x)-len(r)+1) + \"=\"* len(r) + \"\\n\"\n",
-    "    \n",
+    "            workings += (\n",
+    "                math_str\n",
+    "                + \" \" * (len_to_separate + 5 - len(math_str) - len(explain) - 1)\n",
+    "                + explain\n",
+    "                + \"|\\n\"\n",
+    "            )\n",
+    "    workings += \" \" * (len(x) - len(r) + 1) + \"=\" * len(r) + \"\\n\"\n",
+    "\n",
     "    print(f\" {x:<{len_to_separate+2}} | {y} = {int(q)} dư {r}\\n{workings}\")\n",
     "    return int(q), int(r)\n",
+    "\n",
+    "\n",
     "divide(22222, 22, inner_work=True)"
    ]
   },
@@ -207,6 +227,8 @@
     "        ket_qua += str(thuong)\n",
     "\n",
     "    return int(ket_qua), int(du)\n",
+    "\n",
+    "\n",
     "divide_simple(2222, 2)"
    ]
   },
@@ -243,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
