--- a/content/pyodide/interactive-widgets.ipynb
+++ b/content/pyodide/interactive-widgets.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "link((slider, 'value'), (text, 'value'));"
+    "link((slider, \"value\"), (text, \"value\"));"
    ]
   },
   {
@@ -161,19 +161,16 @@
     "n = 100\n",
     "\n",
     "x = list(range(n))\n",
-    "y = np.cumsum(np.random.randn(n)) + 100.\n",
+    "y = np.cumsum(np.random.randn(n)) + 100.0\n",
     "\n",
     "sc_x = LinearScale()\n",
     "sc_y = LinearScale()\n",
     "\n",
-    "lines = Lines(\n",
-    "    x=x, y=y,\n",
-    "    scales={'x': sc_x, 'y': sc_y}\n",
-    ")\n",
-    "ax_x = Axis(scale=sc_x, label='Index')\n",
-    "ax_y = Axis(scale=sc_y, orientation='vertical', label='lines')\n",
+    "lines = Lines(x=x, y=y, scales={\"x\": sc_x, \"y\": sc_y})\n",
+    "ax_x = Axis(scale=sc_x, label=\"Index\")\n",
+    "ax_y = Axis(scale=sc_y, orientation=\"vertical\", label=\"lines\")\n",
     "\n",
-    "Figure(marks=[lines], axes=[ax_x, ax_y], title='Lines')"
+    "Figure(marks=[lines], axes=[ax_x, ax_y], title=\"Lines\")"
    ]
   },
   {
@@ -183,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines.colors = ['green']"
+    "lines.colors = [\"green\"]"
    ]
   },
   {
@@ -193,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines.fill = 'bottom'"
+    "lines.fill = \"bottom\""
    ]
   },
   {
@@ -203,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines.marker = 'circle'"
+    "lines.marker = \"circle\""
    ]
   },
   {
@@ -221,14 +218,11 @@
     "sc_x = LinearScale()\n",
     "sc_y = LinearScale()\n",
     "\n",
-    "bars = Bars(\n",
-    "    x=x, y=y,\n",
-    "    scales={'x': sc_x, 'y': sc_y}\n",
-    ")\n",
-    "ax_x = Axis(scale=sc_x, label='Index')\n",
-    "ax_y = Axis(scale=sc_y, orientation='vertical', label='bars')\n",
+    "bars = Bars(x=x, y=y, scales={\"x\": sc_x, \"y\": sc_y})\n",
+    "ax_x = Axis(scale=sc_x, label=\"Index\")\n",
+    "ax_y = Axis(scale=sc_y, orientation=\"vertical\", label=\"bars\")\n",
     "\n",
-    "Figure(marks=[bars], axes=[ax_x, ax_y], title='Bars', animation_duration=1000)"
+    "Figure(marks=[bars], axes=[ax_x, ax_y], title=\"Bars\", animation_duration=1000)"
    ]
   },
   {
