--- a/content/pyodide/plotly.ipynb
+++ b/content/pyodide/plotly.ipynb
@@ -34,10 +34,11 @@
    "outputs": [],
    "source": [
     "import plotly.graph_objects as go\n",
+    "\n",
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(y=[2, 1, 4, 3]))\n",
     "fig.add_trace(go.Bar(y=[1, 4, 3, 2]))\n",
-    "fig.update_layout(title = 'Hello Figure')\n",
+    "fig.update_layout(title=\"Hello Figure\")\n",
     "fig.show()"
    ]
   },
@@ -66,21 +67,27 @@
     "res = await fetch(URL)\n",
     "text = await res.text()\n",
     "\n",
-    "filename = 'data.csv'\n",
+    "filename = \"data.csv\"\n",
     "\n",
-    "with open(filename, 'w') as f:\n",
+    "with open(filename, \"w\") as f:\n",
     "    f.write(text)\n",
     "\n",
     "df = pd.read_csv(filename)\n",
     "\n",
-    "fig = go.Figure(data=[go.Table(\n",
-    "    header=dict(values=list(df.columns),\n",
-    "                fill_color='paleturquoise',\n",
-    "                align='left'),\n",
-    "    cells=dict(values=[df.Rank, df.State, df.Postal, df.Population],\n",
-    "               fill_color='lavender',\n",
-    "               align='left'))\n",
-    "])\n",
+    "fig = go.Figure(\n",
+    "    data=[\n",
+    "        go.Table(\n",
+    "            header=dict(\n",
+    "                values=list(df.columns), fill_color=\"paleturquoise\", align=\"left\"\n",
+    "            ),\n",
+    "            cells=dict(\n",
+    "                values=[df.Rank, df.State, df.Postal, df.Population],\n",
+    "                fill_color=\"lavender\",\n",
+    "                align=\"left\",\n",
+    "            ),\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "fig.show()"
    ]
@@ -103,23 +110,19 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "x,y = np.meshgrid(np.arange(-2, 2, .2),\n",
-    "                  np.arange(-2, 2, .25))\n",
-    "z = x*np.exp(-x**2 - y**2)\n",
-    "v, u = np.gradient(z, .2, .2)\n",
+    "x, y = np.meshgrid(np.arange(-2, 2, 0.2), np.arange(-2, 2, 0.25))\n",
+    "z = x * np.exp(-(x**2) - y**2)\n",
+    "v, u = np.gradient(z, 0.2, 0.2)\n",
     "\n",
     "# Create quiver figure\n",
-    "fig = ff.create_quiver(x, y, u, v,\n",
-    "                       scale=.25,\n",
-    "                       arrow_scale=.4,\n",
-    "                       name='quiver',\n",
-    "                       line_width=1)\n",
+    "fig = ff.create_quiver(\n",
+    "    x, y, u, v, scale=0.25, arrow_scale=0.4, name=\"quiver\", line_width=1\n",
+    ")\n",
     "\n",
     "# Add points to figure\n",
-    "fig.add_trace(go.Scatter(x=[-.7, .75], y=[0,0],\n",
-    "                    mode='markers',\n",
-    "                    marker_size=12,\n",
-    "                    name='points'))\n",
+    "fig.add_trace(\n",
+    "    go.Scatter(x=[-0.7, 0.75], y=[0, 0], mode=\"markers\", marker_size=12, name=\"points\")\n",
+    ")\n",
     "\n",
     "fig.show()"
    ]
