--- a/content/pyodide/pyb2d/0_tutorial.ipynb
+++ b/content/pyodide/pyb2d/0_tutorial.ipynb
@@ -8,9 +8,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "if \"pyodide\" in sys.modules:\n",
     "    import piplite\n",
-    "    await piplite.install('pyb2d-jupyterlite-backend>=0.4.2')\n"
+    "\n",
+    "    await piplite.install(\"pyb2d-jupyterlite-backend>=0.4.2\")"
    ]
   },
   {
@@ -29,6 +31,7 @@
    "outputs": [],
    "source": [
     "import b2d\n",
+    "\n",
     "# import pyb2d_jupyterlite_backend\n",
     "from pyb2d_jupyterlite_backend.async_jupyter_gui import JupyterAsyncGui\n",
     "import numpy as np\n",
@@ -156,7 +159,6 @@
     "\n",
     "t_elapsed = 0.0\n",
     "for i in range(n_steps):\n",
-    "\n",
     "    # get the bodies center of mass\n",
     "    positions[i, :] = body.world_center\n",
     "\n",
@@ -185,8 +187,8 @@
    "outputs": [],
    "source": [
     "plt.plot(timepoints, positions[:, 1])\n",
-    "plt.ylabel('y-poistion [meter]')\n",
-    "plt.xlabel('t [sec]')\n",
+    "plt.ylabel(\"y-poistion [meter]\")\n",
+    "plt.xlabel(\"t [sec]\")\n",
     "plt.show()"
    ]
   },
@@ -208,8 +210,8 @@
    "outputs": [],
    "source": [
     "plt.plot(timepoints, positions[:, 0])\n",
-    "plt.ylabel('x-poistion [meter]')\n",
-    "plt.xlabel('t [sec]')\n",
+    "plt.ylabel(\"x-poistion [meter]\")\n",
+    "plt.xlabel(\"t [sec]\")\n",
     "plt.show()"
    ]
   },
@@ -235,12 +237,14 @@
     "# create the dynamic body\n",
     "body = world.create_dynamic_body(\n",
     "    position=(5, 5),\n",
-    "    fixtures=b2d.fixture_def(shape=b2d.circle_shape(radius=1), density=1, restitution=0.75),\n",
+    "    fixtures=b2d.fixture_def(\n",
+    "        shape=b2d.circle_shape(radius=1), density=1, restitution=0.75\n",
+    "    ),\n",
     ")\n",
     "\n",
     "# create a box\n",
     "box_shape = b2d.ChainShape()\n",
-    "box_shape.create_loop([(0, 0), (0, 10),(10,10),(10, 0)])\n",
+    "box_shape.create_loop([(0, 0), (0, 10), (10, 10), (10, 0)])\n",
     "box = world.create_static_body(\n",
     "    position=(0, 0), fixtures=b2d.fixture_def(shape=box_shape, friction=0)\n",
     ")\n",
@@ -285,25 +289,33 @@
    "source": [
     "from b2d.testbed import TestbedBase\n",
     "\n",
+    "\n",
     "class InteractiveExample(TestbedBase):\n",
     "    def __init__(self, settings=None):\n",
     "        super(InteractiveExample, self).__init__(settings=settings)\n",
     "        # create two balls\n",
-    "        body = self.world.create_dynamic_body(position=(5, 5),\n",
-    "            fixtures=b2d.fixture_def(shape=b2d.circle_shape(radius=1), density=1, restitution=0.5),\n",
+    "        body = self.world.create_dynamic_body(\n",
+    "            position=(5, 5),\n",
+    "            fixtures=b2d.fixture_def(\n",
+    "                shape=b2d.circle_shape(radius=1), density=1, restitution=0.5\n",
+    "            ),\n",
     "        )\n",
-    "        body = self.world.create_dynamic_body(position=(8, 5),\n",
-    "            fixtures=b2d.fixture_def(shape=b2d.circle_shape(radius=1), density=1, restitution=0.8),\n",
+    "        body = self.world.create_dynamic_body(\n",
+    "            position=(8, 5),\n",
+    "            fixtures=b2d.fixture_def(\n",
+    "                shape=b2d.circle_shape(radius=1), density=1, restitution=0.8\n",
+    "            ),\n",
     "        )\n",
     "        # create a box\n",
     "        box_shape = b2d.ChainShape()\n",
-    "        box_shape.create_loop([(0, 0), (0, 10),(10,10),(10, 0)])\n",
+    "        box_shape.create_loop([(0, 0), (0, 10), (10, 10), (10, 0)])\n",
     "        box = self.world.create_static_body(\n",
     "            position=(0, 0), fixtures=b2d.fixture_def(shape=box_shape, friction=0)\n",
     "        )\n",
-    "        \n",
+    "\n",
+    "\n",
     "s = JupyterAsyncGui.Settings()\n",
-    "s.resolution = [300,300]\n",
+    "s.resolution = [300, 300]\n",
     "b2d.testbed.run(InteractiveExample, backend=JupyterAsyncGui, gui_settings=s);"
    ]
   },
@@ -343,7 +355,7 @@
     "    angular_damping=0.0,\n",
     ")\n",
     "world.create_prismatic_joint(anchor_body, b, local_axis_a=(1, 1))\n",
-    "b2d.plot.animate_world(world, ppm=20, t=3, bounding_box=((0,0),(10,10)))"
+    "b2d.plot.animate_world(world, ppm=20, t=3, bounding_box=((0, 0), (10, 10)))"
    ]
   },
   {
@@ -388,7 +400,7 @@
     "    local_anchor_a=(0, 0),\n",
     "    local_anchor_b=(0, 0),\n",
     ")\n",
-    "b2d.plot.animate_world(world, ppm=20, t=5, bounding_box=((-10,-12),(10,12)))"
+    "b2d.plot.animate_world(world, ppm=20, t=5, bounding_box=((-10, -12), (10, 12)))"
    ]
   },
   {
@@ -425,7 +437,7 @@
     "    a = bodies[i]\n",
     "    b = bodies[i + 1]\n",
     "    world.create_revolute_joint(a, b, local_anchor_a=(2, 0.0), local_anchor_b=(-2, 0.0))\n",
-    "b2d.plot.animate_world(world, ppm=20, t=5, bounding_box=((-20,-10),(20,20)))"
+    "b2d.plot.animate_world(world, ppm=20, t=5, bounding_box=((-20, -10), (20, 20)))"
    ]
   },
   {
@@ -487,7 +499,7 @@
     "        reference_angle=0,\n",
     "        stiffness=20,\n",
     "    )\n",
-    "b2d.plot.animate_world(world, ppm=20, t=5, bounding_box=((0,-5),(5,5)))"
+    "b2d.plot.animate_world(world, ppm=20, t=5, bounding_box=((0, -5), (5, 5)))"
    ]
   },
   {
@@ -550,7 +562,7 @@
     "world.create_wheel_joint(chasis, right_wheel, local_anchor_a=(3, 0), **wheel_joint_def)\n",
     "\n",
     "\n",
-    "b2d.plot.animate_world(world, ppm=20, t=15, bounding_box=((-10,-5),(20,5)))"
+    "b2d.plot.animate_world(world, ppm=20, t=15, bounding_box=((-10, -5), (20, 5)))"
    ]
   },
   {
@@ -571,7 +583,6 @@
     "world = b2d.world(gravity=(0, -10))\n",
     "\n",
     "for i in range(10):\n",
-    "\n",
     "    # create static anchor (does not need shape/fixture)\n",
     "    anchor = world.create_static_body(position=(i, 0))\n",
     "\n",
@@ -584,7 +595,7 @@
     "    # distance joints of various stiffness-es\n",
     "    world.create_distance_joint(anchor, body, length=10, stiffness=0.5 * (i + 1))\n",
     "\n",
-    "b2d.plot.animate_world(world, ppm=20, t=10, bounding_box=((-2,-20),(10,0)))"
+    "b2d.plot.animate_world(world, ppm=20, t=10, bounding_box=((-2, -20), (10, 0)))"
    ]
   },
   {
@@ -613,7 +624,9 @@
     "emitter_def.size = (2, 1)\n",
     "emitter_def.velocity = (6, 20)\n",
     "emitter = b2d.RandomizedLinearEmitter(psystem, emitter_def)\n",
-    "b2d.plot.animate_world(world, ppm=20, t=10, bounding_box=((-10,-20),(20,5)), pre_step=emitter.step)"
+    "b2d.plot.animate_world(\n",
+    "    world, ppm=20, t=10, bounding_box=((-10, -20), (20, 5)), pre_step=emitter.step\n",
+    ")"
    ]
   },
   {
