--- a/content/pyodide/pyb2d/color_mixing.ipynb
+++ b/content/pyodide/pyb2d/color_mixing.ipynb
@@ -7,9 +7,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "if \"pyodide\" in sys.modules:\n",
     "    import piplite\n",
-    "    await piplite.install('pyb2d-jupyterlite-backend>=0.4.2')"
+    "\n",
+    "    await piplite.install(\"pyb2d-jupyterlite-backend>=0.4.2\")"
    ]
   },
   {
@@ -23,8 +25,8 @@
     "import numpy\n",
     "import b2d\n",
     "\n",
-    "class ColorMixing(TestbedBase):\n",
     "\n",
+    "class ColorMixing(TestbedBase):\n",
     "    name = \"ColorMixing\"\n",
     "\n",
     "    def __init__(self, settings=None):\n",
@@ -68,7 +70,6 @@
     "        ]\n",
     "        posiitons = [(6, 10), (20, 10), (20, 20), (6, 20)]\n",
     "        for color, pos in zip(colors, posiitons):\n",
-    "\n",
     "            shape = b2d.polygon_shape(box=(5, 5), center=pos, angle=0)\n",
     "            pgDef = b2d.particle_group_def(\n",
     "                flags=b2d.ParticleFlag.waterParticle\n",
@@ -78,8 +79,7 @@
     "                strength=1.0,\n",
     "                color=color,\n",
     "            )\n",
-    "            group = psystem.create_particle_group(pgDef)\n",
-    "\n"
+    "            group = psystem.create_particle_group(pgDef)"
    ]
   },
   {
@@ -91,7 +91,7 @@
     "from pyb2d_jupyterlite_backend.async_jupyter_gui import JupyterAsyncGui\n",
     "\n",
     "s = JupyterAsyncGui.Settings()\n",
-    "s.resolution = [1000,500]\n",
+    "s.resolution = [1000, 500]\n",
     "s.scale = 8\n",
     "s.fps = 40\n",
     "\n",
