--- a/content/pyodide/pyb2d/games/angry_shapes.ipynb
+++ b/content/pyodide/pyb2d/games/angry_shapes.ipynb
@@ -8,9 +8,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "if \"pyodide\" in sys.modules:\n",
     "    import piplite\n",
-    "    await piplite.install('pyb2d-jupyterlite-backend>=0.4.2')"
+    "\n",
+    "    await piplite.install(\"pyb2d-jupyterlite-backend>=0.4.2\")"
    ]
   },
   {
@@ -25,8 +27,8 @@
     "import numpy\n",
     "import b2d\n",
     "\n",
-    "class AngryShapes(TestbedBase):\n",
     "\n",
+    "class AngryShapes(TestbedBase):\n",
     "    name = \"AngryShapes\"\n",
     "\n",
     "    class Settings(TestbedBase.Settings):\n",
@@ -162,7 +164,6 @@
     "        build_pyramid(offset=(400, 0), bar_shape=[30, 3], n=4)\n",
     "\n",
     "    def build_launcher(self):\n",
-    "\n",
     "        self.launcher_anchor_pos = (30, 0)\n",
     "        self.launcher_anchor = self.world.create_static_body(\n",
     "            position=self.launcher_anchor_pos\n",
@@ -246,7 +247,6 @@
     "            body_a, body_b = body_b, body_a\n",
     "            ud_a, ud_b = ud_b, ud_a\n",
     "        if ud_a == \"projectile\":\n",
-    "\n",
     "            if ud_b == \"target\" or ud_b == \"brick\":\n",
     "                self.marked_for_destruction.append(body_a)\n",
     "                emitter_def = b2d.RandomizedRadialEmitterDef()\n",
@@ -263,7 +263,6 @@
     "                self.emitter_die_time = self.elapsed_time + 0.02\n",
     "\n",
     "    def pre_step(self, dt):\n",
-    "\n",
     "        if self.reload_time is not None:\n",
     "            if self.elapsed_time >= self.reload_time:\n",
     "                self.arm_launcher()\n",
@@ -337,7 +336,6 @@
     "            )\n",
     "\n",
     "    def draw_projectile(self, projectile):\n",
-    "\n",
     "        center = projectile.position\n",
     "        # center_l = target.get_world_point((-3,3))\n",
     "        # center_r = target.get_world_point(( 3,3))\n",
@@ -387,10 +385,11 @@
    "outputs": [],
    "source": [
     "from pyb2d_jupyterlite_backend.async_jupyter_gui import JupyterAsyncGui\n",
+    "\n",
     "s = JupyterAsyncGui.Settings()\n",
-    "s.resolution = [1000,500]\n",
+    "s.resolution = [1000, 500]\n",
     "s.scale = 2\n",
-    "s.translate = [100,100]\n",
+    "s.translate = [100, 100]\n",
     "tb = b2d.testbed.run(AngryShapes, backend=JupyterAsyncGui, gui_settings=s);"
    ]
   }
