--- a/content/pyodide/pyb2d/games/billiard.ipynb
+++ b/content/pyodide/pyb2d/games/billiard.ipynb
@@ -7,9 +7,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "if \"pyodide\" in sys.modules:\n",
     "    import piplite\n",
-    "    await piplite.install('pyb2d-jupyterlite-backend>=0.4.2')"
+    "\n",
+    "    await piplite.install(\"pyb2d-jupyterlite-backend>=0.4.2\")"
    ]
   },
   {
@@ -25,8 +27,8 @@
     "\n",
     "from b2d.testbed import TestbedBase\n",
     "\n",
-    "class Billiard(TestbedBase):\n",
     "\n",
+    "class Billiard(TestbedBase):\n",
     "    name = \"Billiard\"\n",
     "\n",
     "    def __init__(self, settings=None):\n",
@@ -113,7 +115,6 @@
     "\n",
     "        bi = 0\n",
     "        for y in range(n_y):\n",
-    "\n",
     "            py = y * diameter * 0.5 * math.sqrt(3)\n",
     "            n_x = y + 1\n",
     "            ox = diameter * (n_y - y) / 2\n",
@@ -125,7 +126,6 @@
     "        self.create_billard_ball(position=(c_x, 10), color=((1, 1, 1), (1, 1, 1)))\n",
     "\n",
     "    def create_billard_ball(self, position, color):\n",
-    "\n",
     "        ball = self.world.create_dynamic_body(\n",
     "            position=position,\n",
     "            fixtures=b2d.fixture_def(\n",
@@ -200,7 +200,6 @@
     "        return False\n",
     "\n",
     "    def post_debug_draw(self):\n",
-    "\n",
     "        for pocket in self.pockets:\n",
     "            self.debug_draw.draw_solid_circle(\n",
     "                pocket.position, self.ball_radius, (1, 0), (1, 1, 1)\n",
@@ -220,7 +219,6 @@
     "            )\n",
     "\n",
     "        if self._selected_ball is not None:\n",
-    "\n",
     "            # draw circle around selected ball\n",
     "            self.debug_draw.draw_circle(\n",
     "                self._selected_ball.position,\n",
@@ -258,12 +256,13 @@
    "outputs": [],
    "source": [
     "from pyb2d_jupyterlite_backend.async_jupyter_gui import JupyterAsyncGui\n",
+    "\n",
     "backend = JupyterAsyncGui\n",
     "s = backend.Settings()\n",
-    "s.resolution = [500,600]\n",
+    "s.resolution = [500, 600]\n",
     "s.scale = 8\n",
     "s.fps = 40\n",
-    "s.translate = [125,100]\n",
+    "s.translate = [125, 100]\n",
     "b2d.testbed.run(Billiard, backend=backend, gui_settings=s);"
    ]
   },
