--- a/content/pyodide/pyb2d/games/goo.ipynb
+++ b/content/pyodide/pyb2d/games/goo.ipynb
@@ -7,10 +7,12 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "if \"pyodide\" in sys.modules:\n",
     "    import piplite\n",
-    "    await piplite.install('networkx')\n",
-    "    await piplite.install('pyb2d-jupyterlite-backend>=0.4.2')"
+    "\n",
+    "    await piplite.install(\"networkx\")\n",
+    "    await piplite.install(\"pyb2d-jupyterlite-backend>=0.4.2\")"
    ]
   },
   {
@@ -28,6 +30,7 @@
     "import networkx\n",
     "from pyb2d_jupyterlite_backend.async_jupyter_gui import JupyterAsyncGui\n",
     "\n",
+    "\n",
     "def best_pairwise_distance(data, f, distance):\n",
     "    n = len(data)\n",
     "    best = (None, None, float(\"inf\"))\n",
@@ -40,6 +43,7 @@
     "            if d < best[2]:\n",
     "                best = (i, j, d)\n",
     "    return best\n",
+    "\n",
     "\n",
     "class Level(object):\n",
     "    def __init__(self, testbed):\n",
@@ -108,7 +112,6 @@
     "        self.testbed.connect_goos(b, c)\n",
     "\n",
     "    def draw(self, debug_draw):\n",
-    "\n",
     "        # draw outline\n",
     "        for i in range(len(self.outline_verts) - 1):\n",
     "            debug_draw.draw_segment(\n",
@@ -141,7 +144,6 @@
     "\n",
     "\n",
     "class Goo(TestbedBase):\n",
-    "\n",
     "    name = \"Goo\"\n",
     "\n",
     "    def __init__(self, settings=None):\n",
@@ -185,7 +187,6 @@
     "\n",
     "    # trigger some fireworks on win\n",
     "    def on_win(self, win_body):\n",
-    "\n",
     "        if self.psystem is None:\n",
     "            # particle system\n",
     "            pdef = b2d.particle_system_def(\n",
@@ -267,7 +268,6 @@
     "        self.goo_graph.add_edge(goo_a, goo_b, joint=joint)\n",
     "\n",
     "    def query_placement(self, pos):\n",
-    "\n",
     "        radius = 8\n",
     "\n",
     "        # find all goos in around pos\n",
@@ -282,7 +282,6 @@
     "        n_goos = len(goos)\n",
     "\n",
     "        if n_goos >= 2:\n",
-    "\n",
     "            # try to insert to goo as edge between\n",
     "            # 2 existing goos\n",
     "            def distance(a, b, p):\n",
@@ -319,7 +318,6 @@
     "            if best_dist < float(\"inf\"):\n",
     "\n",
     "                def draw_callback():\n",
-    "\n",
     "                    self.draw_edge(pos, goos[i].position, stress=0)\n",
     "                    self.draw_edge(pos, goos[j].position, stress=0)\n",
     "                    self.draw_goo(pos, angle=None)\n",
@@ -400,7 +398,6 @@
     "                    del self.with_goal_contact[body_a]\n",
     "\n",
     "    def pre_step(self, dt):\n",
-    "\n",
     "        # query if goo can be inserted\n",
     "        if (\n",
     "            self.is_mouse_down\n",
@@ -423,7 +420,6 @@
     "\n",
     "            d = length - insert_length\n",
     "            if d > 0:\n",
-    "\n",
     "                # reaction force based stress\n",
     "                rf = joint.get_reaction_force(30).length\n",
     "\n",
@@ -484,7 +480,6 @@
     "            self.emitter.step(dt)\n",
     "\n",
     "    def post_debug_draw(self):\n",
-    "\n",
     "        self.level.draw(self.debug_draw)\n",
     "\n",
     "        # draw mouse when mouse is down\n",
@@ -516,7 +511,7 @@
     "            )\n",
     "\n",
     "        for goo in self.goo_graph:\n",
-    "            self.draw_goo(goo.position, goo.angle, body=goo)\n"
+    "            self.draw_goo(goo.position, goo.angle, body=goo)"
    ]
   },
   {
@@ -536,9 +531,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "s = JupyterAsyncGui.Settings()\n",
-    "s.resolution = [1000,500]\n",
+    "s.resolution = [1000, 500]\n",
     "s.scale = 8\n",
     "tb = b2d.testbed.run(Goo, backend=JupyterAsyncGui, gui_settings=s);"
    ]
