--- a/content/pyodide/pyb2d/games/rocket.ipynb
+++ b/content/pyodide/pyb2d/games/rocket.ipynb
@@ -8,9 +8,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "if \"pyodide\" in sys.modules:\n",
     "    import piplite\n",
-    "    await piplite.install('pyb2d-jupyterlite-backend>=0.4.2')"
+    "\n",
+    "    await piplite.install(\"pyb2d-jupyterlite-backend>=0.4.2\")"
    ]
   },
   {
@@ -26,8 +28,8 @@
     "import b2d\n",
     "import math\n",
     "\n",
-    "class Rocket(TestbedBase):\n",
     "\n",
+    "class Rocket(TestbedBase):\n",
     "    name = \"Rocket\"\n",
     "\n",
     "    def __init__(self, settings=None):\n",
@@ -147,7 +149,6 @@
     "        self.emitters.append(emitter)\n",
     "\n",
     "    def pre_step(self, dt):\n",
-    "\n",
     "        # check if the rocket has died\n",
     "        if self.touched_black_hole:\n",
     "            if self.rocket is not None:\n",
@@ -161,7 +162,7 @@
     "            for planet, planet_def in self.planets.items():\n",
     "                radius = planet_def[\"radius\"]\n",
     "                planet_center = planet.position\n",
-    "                planet_mass = planet_def[\"density\"] * radius ** 2 * math.pi\n",
+    "                planet_mass = planet_def[\"density\"] * radius**2 * math.pi\n",
     "                delta = rocket_center - planet_center\n",
     "                distance = delta.normalize()\n",
     "                f = (\n",
@@ -243,8 +244,9 @@
    "outputs": [],
    "source": [
     "from pyb2d_jupyterlite_backend.async_jupyter_gui import JupyterAsyncGui\n",
+    "\n",
     "s = JupyterAsyncGui.Settings()\n",
-    "s.resolution = [1000,1000]\n",
+    "s.resolution = [1000, 1000]\n",
     "s.scale = 3\n",
     "tb = b2d.testbed.run(Rocket, backend=JupyterAsyncGui, gui_settings=s);"
    ]
