--- a/content/pyodide/pyb2d/gauss_machine.ipynb
+++ b/content/pyodide/pyb2d/gauss_machine.ipynb
@@ -8,9 +8,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "if \"pyodide\" in sys.modules:\n",
     "    import piplite\n",
-    "    await piplite.install('pyb2d-jupyterlite-backend>=0.4.2')"
+    "\n",
+    "    await piplite.install(\"pyb2d-jupyterlite-backend>=0.4.2\")"
    ]
   },
   {
@@ -27,7 +29,6 @@
     "\n",
     "\n",
     "class GaussMachine(TestbedBase):\n",
-    "\n",
     "    name = \"Gauss Machine\"\n",
     "\n",
     "    def __init__(self, settings=None):\n",
@@ -55,7 +56,6 @@
     "        ref_start_y = int(bin_height + box_shape[1] / 10.0)\n",
     "        ref_stop_y = int(box_shape[1] * 0.9)\n",
     "        for x in range(0, box_shape[0] + 1):\n",
-    "\n",
     "            for y in range(ref_start_y, ref_stop_y):\n",
     "                s = [0.5, 0][y % 2 == 0]\n",
     "                shape = b2d.circle_shape(radius=0.3)\n",
@@ -97,8 +97,9 @@
    "outputs": [],
    "source": [
     "from pyb2d_jupyterlite_backend.async_jupyter_gui import JupyterAsyncGui\n",
+    "\n",
     "s = JupyterAsyncGui.Settings()\n",
-    "s.resolution = [350,400]\n",
+    "s.resolution = [350, 400]\n",
     "s.scale = 11\n",
     "tb = b2d.testbed.run(GaussMachine, backend=JupyterAsyncGui, gui_settings=s);"
    ]
