--- a/content/pyodide/pyb2d/newtons_cradle.ipynb
+++ b/content/pyodide/pyb2d/newtons_cradle.ipynb
@@ -8,9 +8,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "if \"pyodide\" in sys.modules:\n",
     "    import piplite\n",
-    "    await piplite.install('pyb2d-jupyterlite-backend>=0.4.0')"
+    "\n",
+    "    await piplite.install(\"pyb2d-jupyterlite-backend>=0.4.0\")"
    ]
   },
   {
@@ -25,7 +27,6 @@
     "\n",
     "\n",
     "class NewtonsCradle(TestbedBase):\n",
-    "\n",
     "    name = \"newton's cradle\"\n",
     "\n",
     "    def __init__(self, settings=None):\n",
@@ -100,8 +101,9 @@
    ],
    "source": [
     "from pyb2d_jupyterlite_backend.async_jupyter_gui import JupyterAsyncGui\n",
+    "\n",
     "s = JupyterAsyncGui.Settings()\n",
-    "s.resolution = [1000,300]\n",
+    "s.resolution = [1000, 300]\n",
     "b2d.testbed.run(NewtonsCradle, backend=JupyterAsyncGui, gui_settings=s);"
    ]
   }
