--- a/content/alpha_fork/hinhhoc.ipynb
+++ b/content/alpha_fork/hinhhoc.ipynb
@@ -48,7 +48,7 @@
     "this_problem = problems[_PROBLEM_NAME]\n",
     "_OUT_FILE = \"results.txt\"#\n",
     "import sys\n",
-    "logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
     "\n",
     "g, _ = gh.Graph.build_problem(this_problem, alphageometry.DEFINITIONS)\n",
     "run_ddar(g, this_problem, _OUT_FILE)"
