--- a/content/alpha_fork/hinhhoc.ipynb
+++ b/content/alpha_fork/hinhhoc.ipynb
@@ -27,7 +27,7 @@
     "# load inference rules used in DD.\n",
     "alphageometry.RULES = pr.Theorem.from_txt_file(\"rules.txt\", to_dict=True)\n",
     "_PROBLEMS_FILE = \"examples.txt\"\n",
-    "_PROBLEM_NAME = \"euler\"\n",
+    "_PROBLEM_NAME = \"incenter_excenter\"\n",
     "# when using the language model,\n",
     "# point names will be renamed to alphabetical a, b, c, d, e, ...\n",
     "# instead of staying with their original names,\n",
