--- a/content/alpha_fork/hinhhoc.ipynb
+++ b/content/alpha_fork/hinhhoc.ipynb
@@ -12,7 +12,8 @@
     ")\n",
     "await micropip.install(\"numpy\")\n",
     "await micropip.install(\"scipy\")\n",
-    "await micropip.install(\"matplotlib\")"
+    "await micropip.install(\"matplotlib\")\n",
+    "await micropip.install(\"/dist/alphageoddar-0.0.1-py3-none-any.whl\")"
    ]
   },
   {
@@ -21,8 +22,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from alphageometry import *\n",
-    "import alphageometry\n",
+    "from alphageo_ddar import alphageometry\n",
+    "from alphageo_ddar.alphageometry import run_ddar\n",
+    "from alphageo_ddar import problem as pr\n",
+    "from alphageo_ddar import graph as gh\n",
+    "import logging\n",
+    "\n",
     "alphageometry.DEFINITIONS = pr.Definition.from_txt_file(\"defs.txt\", to_dict=True)\n",
     "# load inference rules used in DD.\n",
     "alphageometry.RULES = pr.Theorem.from_txt_file(\"rules.txt\", to_dict=True)\n",
